Fix partner logos on mobile

--- a/styles.css
+++ b/styles.css
@@ -691,7 +691,6 @@ i {
 }
 @media only screen and (max-width: 767px) {
     .partners img {
-        width: 100%;
         max-width: 200px;
     }
 }
